--- a/client/src/app/tasks/tasks.component.html
+++ b/client/src/app/tasks/tasks.component.html
@@ -27,11 +27,11 @@
 <form #f="ngForm" (ngSubmit)="adicionarTask(f)" novalidate>
   <div class="form-group">
     <label for="titulo">Título</label>
-    <input type="text" class="form-control" name="titulo" id="titulo" placeholder="Qual o título da tarefa?" [(ngModel)]="task.titulo">
+    <input type="text" class="form-control" maxlength="50" name="titulo" required id="titulo" placeholder="Qual o título da tarefa?" [(ngModel)]="task.titulo">
   </div>
   <div class="form-group">
     <label for="descricao">Descrição</label>
-    <textarea id="descricao" name="descricao" placeholder="Quais as informações da tarefa?" class="form-control" rows="3" [(ngModel)]="task.descricao"></textarea>
+    <textarea id="descricao" name="descricao" maxlength="200" placeholder="Quais as informações da tarefa?" class="form-control" rows="3" [(ngModel)]="task.descricao"></textarea>
   </div>
-  <button type="submit" class="btn btn-info" [disabled]="busy">Adicionar</button>
+  <button type="submit" class="btn btn-info" [disabled]="!f.valid || busy">Adicionar</button>
 </form>
